Infrastructure and behavior fixes: convert to taking official time from UT instead of LT, use micrometers instead of nanometers, fix datapoint highlight when point is not visible, fix tooltips when no message available, fix layout inconsistency with/without scrollbar when columns are moved.
git-svn-id: http://chara.hi.gemini.edu/svn/DRSoftware/gemini_python/trunk@3484 e04282df-fb77-4b70-bf7a-c1223586725c

--- a/astrodata/scripts/adcc_faceplate/css/nighttime_metrics.css
+++ b/astrodata/scripts/adcc_faceplate/css/nighttime_metrics.css
@@ -99,8 +99,8 @@ th.ui-draggable {
 th.ui-draggable-dragging {
     background-color: #DDD;
     box-shadow: 2px 2px 2px #888;
-    opacity: 0.7;
-    filter:alpha(opacity=70);
+    opacity: 0.85;
+    filter:alpha(opacity=85);
 }
 td.ui-draggable-dragging {
     background-color: #DDD;
@@ -263,6 +263,7 @@ td.jqplot-series-hidden div.jqplot-table-legend-swatch {
     width: 5px;
 }
 .swap_icon {
+    cursor: pointer;
     position: absolute;
     bottom: 0px;
     background-image: url(../images/swap.png);
